changed the color to green

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <nav class="navbar navbar-light navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand" href="#"><img class="nav-logo" src="img/optical-new.png" alt="ompixs logo"></a>
+      <a class="navbar-brand" href="#"><img class="nav-logo" src="img/optical-new-removebg.png" alt="ompixs logo"></a>
       <button class="navbar-toggler toggle-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar">
         <span class="la la-bars"></span>
@@ -128,7 +128,7 @@
             <div class="row">
               <div class="col-lg-6">
               <div class="banner-textarea">
-                <h1 class="text-uppercase text-berbas"><span class="text-white">Optical</span> <span class="text-red">Motion</span> <span class="text-white">Pictures</span></h1>
+                <h1 class="text-uppercase text-berbas"><span class="text-white">Optical</span> <span class="text-green">Motion</span> <span class="text-white">Pictures</span></h1>
                 <p class="font-300">Premium Experience in Videography : Movie and Film Production, Professionals in Reality TV Shows, Advertising and online audio-visual content platforms.</p>
                 <div class="banner-button mt-3">
                     <a href="#un" class="btn btn-banner text-barlow text-uppercase">Contact Us</a>
@@ -146,7 +146,7 @@
           <div class="row">
             <div class="col-lg-6">
             <div class="banner-textarea">
-              <h1 class="text-uppercase text-berbas"><span class="text-white">Camera</span> <span class="text-red">Rentals</span> </h1>
+              <h1 class="text-uppercase text-berbas"><span class="text-white">Camera</span> <span class="text-green">Rentals</span> </h1>
               <p class="font-300">We also make provisions for Rentals of Cameras of Good Quality that would serve you excellently for your events.</p>
               <div class="banner-button mt-3">
                   <a href="#un" class="btn btn-banner text-barlow text-uppercase">Contact Us</a>
@@ -164,7 +164,7 @@
           <div class="row">
             <div class="col-lg-6">
             <div class="banner-textarea">
-              <h1 class="text-uppercase text-berbas"><span class="text-white">Event</span> <span class="text-red">Coverage</span> <span class="text-white">Specialists</span></h1>
+              <h1 class="text-uppercase text-berbas"><span class="text-white">Event</span> <span class="text-green">Coverage</span> <span class="text-white">Specialists</span></h1>
               <p class="font-300">Let Optical Motion Pictures handle your Wedding, Engagement, Graduation or any other big event you're planning that requires Video Coverage.</p>
               <div class="banner-button mt-3">
                   <a href="#un" class="btn btn-banner text-barlow text-uppercase">Contact Us</a>
@@ -180,7 +180,7 @@
 
     <section class="welcome-area">
       <div class="container text-center wow fadeInUp" data-wow-duration="1s">
-         <h2><span class="text-red">OMPIXS</span> <span class="text-white">- VIDEOGRAPHY AND CAMERA RENTALS</span></h2>
+         <h2><span class="text-green">OMPIXS</span> <span class="text-white">- VIDEOGRAPHY AND CAMERA RENTALS</span></h2>
          <p class="mt-2">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. They have established themselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
          <p>Over the years, Ompixs has gained a reputation for delivering excellent technical support services to major TV and online content producers in Nigeria. They have partnered with renowned companies such as Africa Magic, Showmax, and Multichoice Nigeria, and have contributed to the production of popular shows including BBN, Date my Family Nigeria, Shoot your shot Nigeria, Unmarried, and What Will People Say game shows.</p>
          <p>The company's mission is to become the top indigenous Nigerian and African private syndicating production hub. They aim to excel in all aspects of content production, from technical expertise to manpower, and from pre-production to distribution and broadcasting worldwide. Ompixs strives to consistently deliver professional and high-quality work, placing emphasis on customer satisfaction.</p>
@@ -195,7 +195,7 @@
         <div class="row">
 
           <div class="col-md-6">
-             <h2 class="text-barlow font-600 wow fadeInLeft" data-wow-duration="1.5s"><span class="text-red">About</span> <span class="text-white">Adeyemi Kolade</span></h2>
+             <h2 class="text-barlow font-600 wow fadeInLeft" data-wow-duration="1.5s"><span class="text-green">About</span> <span class="text-white">Adeyemi Kolade</span></h2>
              <p class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.2s">Adeyemi Kolade is one of Nigerian fast rising  and Africans TV Technical director &  director of photography, with more than ten years of experience in capturing and producing exceptional video content for TV, films, advertising, and online audio-visual platforms. He is the founder of Optical Motions Pictures (Ompixs).</p>
              <p class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.4s">Adeyemi's journey began in 2008 when he started as a TV engineering student at NTA Channel 10 Lagos, after which he moved to Lagos Network Centre and began working as a camera assistant. He quickly progressed through various roles in different production units, including sound, editing, vision mixing, associate producing, directing, and producing live entertainment shows and segments for shows like Africa Magic (AM) Express, Morning Ride, Newsline, Tales by Moonlight, and The Entertainers.</p>
              <p class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.6s">Having gained extensive experience, Adeyemi embarked on freelance work, collaborating with independent content producers and TV shows across Lagos. In 2014, he joined Blink Africa as a full-time contract staff member, working as the Director of Photography for major TV content shows on Africa Magic, such as Hustle, Truth, Unmarried, Shoot Your Shot, Date My Family Nigeria, and Dilemma.</p>
@@ -219,7 +219,7 @@
 
     <section class="project-area">
          <div class="container">
-          <h2 class="text-barlow text-center font-600 wow fadeInUp" data-wow-duration="1.5s"><span class="text-white">OUR</span> <span class="text-red">PROJECTS</span></h2>
+          <h2 class="text-barlow text-center font-600 wow fadeInUp" data-wow-duration="1.5s"><span class="text-white">OUR</span> <span class="text-green">PROJECTS</span></h2>
           <p class="text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">Explore some projects handled by Optical Motion Pictures.</p>
          </div>
 
@@ -233,7 +233,7 @@
               <div class="overlay">
                 <div class="text">
                   <span class="name d-block mb-0">Shoot your Shoot Season 2 (2022)</span>
-                  <span class="text-white type">Comedy, Drama</span>
+                  <span class="text-green type">Comedy, Drama</span>
                   <p class="text-white starring">Starring : Venita James, Bianca Donald, Regina Daniels</p>
                 </div>
               </div>
@@ -248,7 +248,7 @@
               <div class="overlay">
                 <div class="text">
                   <span class="name d-block mb-0">Unmarried Season 2 (2022)</span>
-                  <span class="text-white type">Comedy, Drama</span>
+                  <span class="text-green type">Comedy, Drama</span>
                   <p class="text-white starring">Starring : Venita James, Bianca Donald, Regina Daniels</p>
                 </div>
               </div>
@@ -263,7 +263,7 @@
               <div class="overlay">
                 <div class="text">
                   <span class="name d-block mb-0">Shoot your Shoot Season 2 (2022)</span>
-                  <span class="text-white type">Comedy, Drama</span>
+                  <span class="text-green type">Comedy, Drama</span>
                   <p class="text-white starring">Starring : Venita James, Bianca Donald, Regina Daniels</p>
                 </div>
               </div>
@@ -278,7 +278,7 @@
               <div class="overlay">
                 <div class="text">
                   <span class="name d-block mb-0">Unmarried Season 2 (2022)</span>
-                  <span class="text-white type">Comedy, Drama</span>
+                  <span class="text-green type">Comedy, Drama</span>
                   <p class="text-white starring">Starring : Venita James, Bianca Donald, Regina Daniels</p>
                 </div>
               </div>
@@ -292,7 +292,7 @@
 
     <section class="services-area">
       <div class="container">
-         <h2 class="text-barlow text-center font-600 wow fadeInUp" data-wow-duration="1.5s"><span class="text-white">OUR</span> <span class="text-red">SERVICES</span></h2>
+         <h2 class="text-barlow text-center font-600 wow fadeInUp" data-wow-duration="1.5s"><span class="text-white">OUR</span> <span class="text-green">SERVICES</span></h2>
          <p class="text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">Below are the Services Rendered by Optical Motion Pictures (OMPIXS)</p>
 
          <div class="row wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
@@ -626,17 +626,17 @@
             <div class="col-lg-3 order-first order-lg-last mt-2 mt-mt-0">
 
               <div class="contact-info">
-                <h5 class="text-barlow text-uppercase font-600"><span class="text-red me-1"><i class="fa fa-home"></i></span> <span class="text-white">Address</span></h5>
+                <h5 class="text-barlow text-uppercase font-600"><span class="text-green me-1"><i class="fa fa-home"></i></span> <span class="text-white">Address</span></h5>
                 <p class="font-14">Banana Island, Lagos, Nigeria.</p>
               </div>
 
               <div class="contact-info mt-3">
-                <h5 class="text-barlow text-uppercase font-600"><span class="text-red me-1"><i class="fa fa-envelope-o"></i></span> <span class="text-white">Email</span></h5>
+                <h5 class="text-barlow text-uppercase font-600"><span class="text-green me-1"><i class="fa fa-envelope-o"></i></span> <span class="text-white">Email</span></h5>
                 <p class="font-14">support@ompixs.com</p>
               </div>
 
               <div class="contact-info mt-3">
-                <h5 class="text-barlow text-uppercase font-600"><span class="text-red me-1"><i class="fa fa-phone"></i></span> <span class="text-white">Phone Number</span></h5>
+                <h5 class="text-barlow text-uppercase font-600"><span class="text-green me-1"><i class="fa fa-phone"></i></span> <span class="text-white">Phone Number</span></h5>
                 <p class="font-14">+234-343-463-4839</p>
               </div>
 
@@ -688,9 +688,9 @@
           <div class="col-lg-4">
             <h4 class="text-white text-lato footer-header">Contact</h4>
             <ul class="foot-list">
-              <li><a href="#un"><span class="text-red me-1"><i class="fa fa-home"></i></span> Address : Banana Island, Lagos, Nigeria.</a></li>
-              <li><a href="#un"><span class="text-red me-1"><i class="fa fa-envelope-o"></i></span> Email : support@ompixs.com</a></li>
-              <li><a href="#un"><span class="text-red me-1"><i class="fa fa-phone"></i></span> Phone Number : +234-343-463-4839</a></li>
+              <li><a href="#un"><span class="text-green me-1"><i class="fa fa-home"></i></span> Address : Banana Island, Lagos, Nigeria.</a></li>
+              <li><a href="#un"><span class="text-green me-1"><i class="fa fa-envelope-o"></i></span> Email : support@ompixs.com</a></li>
+              <li><a href="#un"><span class="text-green me-1"><i class="fa fa-phone"></i></span> Phone Number : +234-343-463-4839</a></li>
             </ul>
           </div>
         </div>
