added touch or red

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
     <section class="welcome-area">
       <div class="container text-center wow fadeInUp" data-wow-duration="1s">
-         <h2><span class="text-green">OMPIXS</span> <span class="text-white">- VIDEOGRAPHY AND CAMERA RENTALS</span></h2>
+         <h2><span class="text-green">OMPIXS</span> <span class="text-white">- VIDEOGRAPHY <span class="text-red">AND</span> CAMERA RENTALS</span></h2>
          <p class="mt-2">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. They have established themselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
          <p>Over the years, Ompixs has gained a reputation for delivering excellent technical support services to major TV and online content producers in Nigeria. They have partnered with renowned companies such as Africa Magic, Showmax, and Multichoice Nigeria, and have contributed to the production of popular shows including BBN, Date my Family Nigeria, Shoot your shot Nigeria, Unmarried, and What Will People Say game shows.</p>
          <p>The company's mission is to become the top indigenous Nigerian and African private syndicating production hub. They aim to excel in all aspects of content production, from technical expertise to manpower, and from pre-production to distribution and broadcasting worldwide. Ompixs strives to consistently deliver professional and high-quality work, placing emphasis on customer satisfaction.</p>
@@ -195,7 +195,7 @@
         <div class="row">
 
           <div class="col-md-6">
-             <h2 class="text-barlow font-600 wow fadeInLeft" data-wow-duration="1.5s"><span class="text-green">About</span> <span class="text-white">Adeyemi Kolade</span></h2>
+             <h2 class="text-barlow font-600 wow fadeInLeft" data-wow-duration="1.5s"><span class="text-green">About</span> <span class="text-white">Adeyemi</span> <span class="text-red">Kolade</span></h2>
              <p class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.2s">Adeyemi Kolade is one of Nigerian fast rising  and Africans TV Technical director &  director of photography, with more than ten years of experience in capturing and producing exceptional video content for TV, films, advertising, and online audio-visual platforms. He is the founder of Optical Motions Pictures (Ompixs).</p>
              <p class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.4s">Adeyemi's journey began in 2008 when he started as a TV engineering student at NTA Channel 10 Lagos, after which he moved to Lagos Network Centre and began working as a camera assistant. He quickly progressed through various roles in different production units, including sound, editing, vision mixing, associate producing, directing, and producing live entertainment shows and segments for shows like Africa Magic (AM) Express, Morning Ride, Newsline, Tales by Moonlight, and The Entertainers.</p>
              <p class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.6s">Having gained extensive experience, Adeyemi embarked on freelance work, collaborating with independent content producers and TV shows across Lagos. In 2014, he joined Blink Africa as a full-time contract staff member, working as the Director of Photography for major TV content shows on Africa Magic, such as Hustle, Truth, Unmarried, Shoot Your Shot, Date My Family Nigeria, and Dilemma.</p>
