adjusted about us

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
     <section class="welcome-area">
       <div class="container text-center wow fadeInUp" data-wow-duration="1s">
          <h2><span class="text-green">OMPIXS</span> <span class="text-white">- VIDEOGRAPHY <span class="text-red">AND</span> CAMERA RENTALS</span></h2>
-         <p class="mt-2">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. They have established themselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
-         <p>Over the years, Ompixs has gained a reputation for delivering excellent technical support services to major TV and online content producers in Nigeria. They have partnered with renowned companies such as Africa Magic, Showmax, and Multichoice Nigeria, and have contributed to the production of popular shows including BBN, Date my Family Nigeria, Shoot your shot Nigeria, Unmarried, and What Will People Say game shows.</p>
-         <p>The company's mission is to become the top indigenous Nigerian and African private syndicating production hub. They aim to excel in all aspects of content production, from technical expertise to manpower, and from pre-production to distribution and broadcasting worldwide. Ompixs strives to consistently deliver professional and high-quality work, placing emphasis on customer satisfaction.</p>
+         <p class="mt-2">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. It has established itself as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
+         <p>Over the years, Ompixs has gained a reputation for delivering excellent technical support services to major TV and online content producers in Nigeria. It has partnered with renowned companies such as Africa Magic, Showmax, and Multichoice Nigeria, and have contributed to the production of popular shows including BBN, Date my Family Nigeria, Shoot your shot Nigeria, Unmarried, and What Will People Say game shows.</p>
+         <p>It's mission is to become the top indigenous Nigerian and African private syndicating production hub. Ompixs aim to excel in all aspects of content production, from technical expertise to manpower, and from pre-production to distribution and broadcasting worldwide. Ompixs strives to consistently deliver professional and high-quality work, placing emphasis on customer satisfaction.</p>
          <div class="mt-2">
            <a href="#un" class="btn btn-about">More About Us <i class="la la-long-arrow-right"></i></a>
          </div>
@@ -293,7 +293,7 @@
     <section class="services-area">
       <div class="container">
          <h2 class="text-barlow text-center font-600 wow fadeInUp" data-wow-duration="1.5s"><span class="text-white">OUR</span> <span class="text-green">SERVICES</span></h2>
-         <p class="text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">Below are the Services Rendered by Optical Motion Pictures (OMPIXS)</p>
+         <!-- <p class="text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">Below are the Services Rendered by Optical Motion Pictures (OMPIXS)</p> -->
 
          <div class="row wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
           <div class="col-md-6">
@@ -313,7 +313,7 @@
        </div>
        <div class="col-md-6">
         <div class="service-content">
-           <span><i class="la la-plus"></i> Camera Operator</span>
+           <span><i class="la la-plus"></i> Local Production Crew</span>
         </div>
      </div>
      <div class="col-md-6">
@@ -674,15 +674,31 @@
               <p class="footer-text text-white-50">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. They have established themselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
           </div>
           <div class="col-lg-4">
-            <h4 class="text-white text-lato footer-header">Quicks Links</h4>
+            <h4 class="text-white text-lato footer-header text-lg-center text-start">Quicks Links</h4>
             <ul class="foot-list">
+              <div class="row justify-content-center">
+                <div class="col-4">
               <li><a href="#un">Home</a></li>
+            </div>
+            <div class="col-4">
               <li><a href="#un">About</a></li>
+            </div>
+            <div class="col-4">
               <li><a href="#un">Profile</a></li>
+            </div>
+            <div class="col-4">
               <li><a href="#un">Cameras</a></li>
+            </div>
+            <div class="col-4">
               <li><a href="#un">Services</a></li>
+            </div>
+            <div class="col-4">
               <li><a href="#un">Gallery</a></li>
+            </div>
+            <div class="col-4">
               <li><a href="#un">Contact</a></li>
+            </div>
+            </div>
             </ul>
           </div>
           <div class="col-lg-4">
@@ -701,7 +717,7 @@
           <a href="#un"><i class="fab fa-instagram"></i></a>
         </div>
 
-        <p class="text-center text-white footer-text mt-2">Copyright &copy; <script>document.write(new Date().getFullYear());</script>. All Rights Reserved.</p>
+        <p class="text-center text-white footer-text mt-2"><span>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All Rights Reserved</span> <span class="d-none d-md-inline text-green">|</span> <br class="d-md-none d-block"> <span>Created with <i class="la la-heart-o text-green"></i> by <a class="digi-link" target="_blank" href="https://sites.google.com/view/digitalroahservices/">Digital Roah Services.</a></span></p>
 
     </div>
 
