adjusted testimonials side

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
            <div class="testi-content">
             <div align="center" class="testifier my-3">
              <div class="col-md-6">
-               <img src="img/ompixs-testi-1.jpg" alt="zilla-testi-1" class="img-testimonial">
+               <!-- <img src="img/ompixs-testi-1.jpg" alt="zilla-testi-1" class="img-testimonial"> -->
                <div class="test-quote mt-2">
                  <p>
                    <sup class="me-1"><i class="fa fa-quote-left fa-2x text-green" aria-hidden="true"></i></sup>
@@ -538,7 +538,7 @@
        
             <div align="center" class="testifier my-3">
              <div class="col-md-6">
-             <img src="img/paa-testi-one.jpg" alt="zilla-testi-1" class="img-testimonial">
+             <!-- <img src="img/paa-testi-one.jpg" alt="zilla-testi-1" class="img-testimonial"> -->
              <div class="test-quote mt-2">
                <p>
                  <sup class="me-1"><i class="fa fa-quote-left fa-2x text-green" aria-hidden="true"></i></sup>
@@ -552,7 +552,7 @@
        
             <div align="center" class="testifier my-3">
              <div class="col-md-6">
-             <img src="img/paa-mem-1.jpg" alt="zilla-testi-1" class="img-testimonial">
+             <!-- <img src="img/paa-mem-1.jpg" alt="zilla-testi-1" class="img-testimonial"> -->
              <div class="test-quote mt-2">
                <p>
                  <sup class="me-1"><i class="fa fa-quote-left fa-2x text-green" aria-hidden="true"></i></sup>
