--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <nav class="navbar navbar-light navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand" href="#"><img class="nav-logo" src="img/optical-new-removebg.png" alt="ompixs logo"></a>
+      <a class="navbar-brand" href="index.html"><img class="nav-logo" src="img/optical-new-removebg.png" alt="ompixs logo"></a>
       <button class="navbar-toggler toggle-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar">
         <span class="la la-bars"></span>
@@ -66,28 +66,41 @@
         <div class="offcanvas-body pt-0">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Profile</a>
+              <a class="nav-link" href="profile.html">Profile</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" id="dropdownId"
                 aria-haspopup="true" aria-expanded="false" class="camera-drop">Cameras</a>
                 <div class="abs-dropicon d-lg-none">
-                  <span class="fa fa-angle-right text-white" id="dropspan" onclick="getdropdown()"></span>
+                  <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
               </div>
-              <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" aria-labelledby="dropdownId">
+              <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu1" aria-labelledby="dropdownId">
                 <a class="dropdown-item" href="#">Nikon</a>
                 <a class="dropdown-item" href="#">Canon</a>
                 <a class="dropdown-item" href="#">Sony</a>
               </div>
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link" href="#" id="dropdownId"
+                aria-haspopup="true" aria-expanded="false" class="camera-drop">Services</a>
+                <div class="abs-dropicon d-lg-none">
+                  <span class="fa fa-angle-right text-white" id="dropspan2" onclick="getdropdown(2)"></span>
+              </div>
+              <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu2" aria-labelledby="dropdownId">
+                <a class="dropdown-item" href="#">Light</a>
+                <a class="dropdown-item" href="#">Audio Mixers</a>
+                <a class="dropdown-item" href="#">Engineering Support</a>
+                <a class="dropdown-item" href="#">Local Crew Sourcing</a>
+              </div>
+            </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="#">Credits</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Projects</a>
@@ -185,7 +198,7 @@
          <p>Over the years, Ompixs has gained a reputation for delivering excellent technical support services to major TV and online content producers in Nigeria. We have partnered with renowned companies such as Africa Magic, Showmax, and Multichoice Nigeria, and have contributed to the production of popular shows including BBN, Date my Family Nigeria, Shoot your shot Nigeria, Unmarried, and What Will People Say game shows.</p>
          <p>Our mission is to become the top indigenous Nigerian and African private syndicating production hub. We aim to excel in all aspects of content production, from technical expertise to manpower, and from pre-production to distribution and broadcasting worldwide. Ompixs strives to consistently deliver professional and high-quality work, placing emphasis on customer satisfaction.</p>
          <div class="mt-2">
-           <a href="#un" class="btn btn-about">More About Us <i class="la la-long-arrow-right"></i></a>
+           <a href="about.html" class="btn btn-about">More About Us <i class="la la-long-arrow-right"></i></a>
          </div>
       </div>
     </section>
@@ -200,7 +213,7 @@
              <p class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.4s">Adeyemi's journey began in 2008 when he started as a TV engineering student at NTA Channel 10 Lagos, after which he moved to Lagos Network Centre and began working as a camera assistant. He quickly progressed through various roles in different production units, including sound, editing, vision mixing, associate producing, directing, and producing live entertainment shows and segments for shows like Africa Magic (AM) Express, Morning Ride, Newsline, Tales by Moonlight, and The Entertainers.</p>
              <p class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.6s">Having gained extensive experience, Adeyemi embarked on freelance work, collaborating with independent content producers and TV shows across Lagos. In 2014, he joined Blink Africa as a full-time contract staff member, working as the Director of Photography for major TV content shows on Africa Magic, such as Hustle, Truth, Unmarried, Shoot Your Shot, Date My Family Nigeria, and Dilemma.</p>
              <div class="mt-2 wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.8s">
-              <a href="#un" class="btn btn-about">View Profile <i class="la la-long-arrow-right"></i></a>
+              <a href="profile.html" class="btn btn-about">View Profile <i class="la la-long-arrow-right"></i></a>
             </div>
           </div>
 
@@ -647,7 +660,32 @@
         </div>
     </section>
 
-    <section class="profile-area">
+    <!-- <section class="trailer-area">
+      <video id="myVideo" class="regvideo" controls>
+        <source src="img/Unmarried-Nigeria-S2-Drama-series-Africa-Magic-on-Showmax.mp4" type="video/mp4">
+    </video>
+    <a href="javascript:void(0);" onclick="play()">Play</a>
+    </section> -->
+
+    <section class="trailer-area position-relative">
+      <div class="video-bg">
+         <div class="container">
+          <div class="row justify-content-center text-center">
+             <h1 class="text-white text-uppercase text-barlow">Optical Motion Pictures | Demo Reel</h1>
+             <a href="javascript:void(0);" class="playvideo btn" onclick="play()"> <span class="fa fa-play-circle-o"></span> Play Video</a>
+          </div>
+         </div>
+         <div class="water-mark">
+          <img src="img/optical-new-removebg.png" alt="#un" class="img-watermark">
+         </div>
+      </div>
+      <div class="close-hidden" onclick="stop()"><span class="la la-close text-white"></span></div>
+      <video id="myVideo" class="regvideo" controls>
+        <source src="img/Unmarried-Nigeria-S2-Drama-series-Africa-Magic-on-Showmax.mp4" type="video/mp4">
+     </video>
+    </section>
+
+    <!-- <section class="profile-area">
        <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-7 col-md-10 text-center">
@@ -658,7 +696,7 @@
           </div>
         </div>
        </div>
-    </section>
+    </section> -->
 
     <section></section>
 
@@ -681,16 +719,22 @@
               <li><a href="#un">Home</a></li>
             </div>
             <div class="col-4">
-              <li><a href="#un">About</a></li>
+              <li><a href="about.html">About</a></li>
             </div>
             <div class="col-4">
-              <li><a href="#un">Profile</a></li>
+              <li><a href="profile.html">Profile</a></li>
             </div>
             <div class="col-4">
               <li><a href="#un">Cameras</a></li>
             </div>
             <div class="col-4">
               <li><a href="#un">Services</a></li>
+            </div>
+            <div class="col-4">
+              <li><a href="#un">Credits</a></li>
+            </div>
+            <div class="col-4">
+              <li><a href="#un">Projects</a></li>
             </div>
             <div class="col-4">
               <li><a href="#un">Gallery</a></li>
@@ -875,6 +919,25 @@ $('.testi-content').slick({
             width: "100%",
           });
         });
+      </script>
+
+      <script>
+
+        function play() {
+          $('.video-bg').hide();
+          $('.close-hidden').show();
+          var vid = document.getElementById("myVideo");
+          vid.play();
+        }
+
+        function stop() {
+          var vid = document.getElementById("myVideo");
+          vid.pause();
+          vid.currentTime = 0;
+          $('.video-bg').show();
+          $('.close-hidden').hide();
+        }
+        
       </script>
 
 </body>
