edited footer text and service dropdown

--- a/profile.html
+++ b/profile.html
@@ -75,19 +75,29 @@
               <a class="nav-link active" href="profile.html">Profile</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="#" id="dropdownId"
-                aria-haspopup="true" aria-expanded="false" class="camera-drop">Cameras</a>
-                <div class="abs-dropicon d-lg-none">
-                  <span class="fa fa-angle-right text-white" id="dropspan" onclick="getdropdown()"></span>
-              </div>
-              <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" aria-labelledby="dropdownId">
-                <a class="dropdown-item" href="#">Nikon</a>
-                <a class="dropdown-item" href="#">Canon</a>
-                <a class="dropdown-item" href="#">Sony</a>
-              </div>
-            </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="#" id="dropdownId"
+                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Cameras</a>
+                  <div class="abs-dropicon d-lg-none">
+                    <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
+                </div>
+                <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu1" aria-labelledby="dropdownId">
+                  <a class="dropdown-item" href="#">Nikon</a>
+                  <a class="dropdown-item" href="#">Canon</a>
+                  <a class="dropdown-item" href="#">Sony</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="#" id="dropdownId"
+                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Services</a>
+                  <div class="abs-dropicon d-lg-none">
+                    <span class="fa fa-angle-right text-white" id="dropspan2" onclick="getdropdown(2)"></span>
+                </div>
+                <div class="dropdown-menu ak-drop animated animate__faster fadeInUp" id="akmenu2" aria-labelledby="dropdownId">
+                  <a class="dropdown-item" href="#">Light</a>
+                  <a class="dropdown-item" href="#">Audio Mixers</a>
+                  <a class="dropdown-item" href="#">Engineering Support</a>
+                  <a class="dropdown-item" href="#">Local Crew Sourcing</a>
+                </div>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Credits</a>
@@ -262,7 +272,7 @@
         <div class="row">
           <div class="col-lg-4">
               <h4 class="text-white text-lato footer-header">OMPIXS</h4>
-              <p class="footer-text text-white-50">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. They have established themselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
+              <p class="footer-text text-white-50">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. We have established ourselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
           </div>
           <div class="col-lg-4">
             <h4 class="text-white text-lato footer-header text-lg-center text-start">Quicks Links</h4>
