--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
         <div class="row">
           <div class="col-lg-4">
               <h4 class="text-white text-lato footer-header">OMPIXS</h4>
-              <p class="footer-text text-white-50">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. They have established themselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
+              <p class="footer-text text-white-50">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. We have established ourselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
           </div>
           <div class="col-lg-4">
             <h4 class="text-white text-lato footer-header text-lg-center text-start">Quicks Links</h4>
