changed camera rentals color and blurred banner

--- a/profile.html
+++ b/profile.html
@@ -76,7 +76,7 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" id="dropdownId"
-                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Gadgets</a>
+                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Cameras</a>
                   <div class="abs-dropicon d-lg-none">
                     <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
                 </div>
@@ -288,7 +288,7 @@
               <li><a href="profile.html">Profile</a></li>
             </div>
             <div class="col-4">
-              <li><a href="#un">Gadgets</a></li>
+              <li><a href="#un">Cameras</a></li>
             </div>
             <div class="col-4">
               <li><a href="#un">Services</a></li>
