--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" id="dropdownId"
-                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Gadgets</a>
+                  aria-haspopup="true" aria-expanded="false" class="camera-drop">Cameras</a>
                   <div class="abs-dropicon d-lg-none">
                     <span class="fa fa-angle-right text-white" id="dropspan1" onclick="getdropdown(1)"></span>
                 </div>
@@ -161,7 +161,7 @@
            <div class="row wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
             <div class="col-md-6">
                <div class="service-content">
-                  <span><i class="la la-plus"></i> Media/Production Gadget Rentals</span>
+                  <span><i class="la la-plus"></i> Camera Rentals</span>
                </div>
             </div>
             <div class="col-md-6">
@@ -325,7 +325,7 @@
               <li><a href="profile.html">Profile</a></li>
             </div>
             <div class="col-4">
-              <li><a href="#un">Gadgets</a></li>
+              <li><a href="#un">Cameras</a></li>
             </div>
             <div class="col-4">
               <li><a href="#un">Services</a></li>
